--- a/prez/rxjs.html
+++ b/prez/rxjs.html
@@ -58,7 +58,7 @@
 					<h2>Observable</h2>
 					<img src="img/life.png" alt="Life">
 				</section>
-				<section>
+				<section data-transition="slide-in fade-out">
 					<h2>RxJs <a href="https://www.learnrxjs.io/operators/">operátor</a> típusok</h2>
 					<div class="">
 						<ul> 
@@ -73,18 +73,18 @@
 						</ul>
 					</div>
 				</section>
-				<section>
+				<section data-transition="fade-in slide-out">
 					<h2>RxJs <a href="https://www.learnrxjs.io/operators/">operátor</a> típusok</h2>
 					<div class="">
 						<ul> 
-							<li>Creation</li>
-							<li>Combination</li>
+							<li><a>Creation</a></li>
+							<li><a>Combination</a></li>
 							<li><s>Conditional</s></li>
 							<li><s>Error Handling</s></li>
-							<li>Filtering</li>
+							<li><a>Filtering</a></li>
 							<li><s>Multicasting</s></li>
-							<li>Transformation</li>
-							<li>Utility</li>
+							<li><a>Transformation</a></li>
+							<li><a>Utility</a></li>
 						</ul>
 					</div>
 				</section>
