--- a/prez/rxjs.html
+++ b/prez/rxjs.html
@@ -170,6 +170,13 @@
 					<img src="img/filter.png" alt="Life">
 				</section>
 				<section>
+					<h2>Transformation</h2>
+					<ul>
+						<li><a href="https://rxmarbles.com/#map">map</a></li>
+						<li><a href="https://rxmarbles.com/#scan">scan</a></li>
+					</ul>					
+				</section>
+				<section>
 					<h2>Utility</h2>
 					<br>
 					<ul>
@@ -180,6 +187,12 @@
 					<br>
 					<img src="img/tap.png" alt="Life">
 				</section>
+				<section>
+					<h2>Decision tree</h2>
+					<ul>
+						<li><a href="https://rxjs-dev.firebaseapp.com/operator-decision-tree">Decision tree</a></li>
+					</ul>					
+				</section> 
 				<section>
 					<h2>Köszönöm a figyelmet!</h2>
 				</section>
